# Quipu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  USER_MANUAL.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/collector/: pyproject.toml
apps/collector/ops/: collector.env.example
apps/collector/ops/systemd/: quipu-collector.service  quipu-collector.timer
apps/collector/ops/windows/: collector.env.example.ps1  start-quipu-collector.ps1
apps/collector/src/quipu_collector/: __init__.py  __main__.py  collect.py  spool.py
apps/collector/tests/: test_cli.py  test_collect.py  test_ops_packaging.py  test_spool.py
apps/server/: pyproject.toml
apps/server/src/quipu_server/: __init__.py  analysis.py  app.py  contracts.py  db.py  repository.py  seed.py  settings.py
apps/server/tests/: conftest.py  test_analysis.py  test_api.py  test_contracts.py  test_enrollment.py  test_interventions.py  test_investigations.py  test_repository.py  test_seed.py  test_settings.py  test_workflow_patterns.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
docs/superpowers/: DASHBOARD.md  DECISION_LOG.md  PRODUCT_HARDENING.md  RETRO.md  ROADMAP.md  SHIP_CHECKLIST.md
docs/superpowers/plans/: 2026-07-07-before-after-verification.md  2026-07-07-command-center-redesign.md  2026-07-07-dark-telemetry-expansion.md  (+9 more)
fixtures/ingest/: team-sample.json
scripts/: dev-server.sh  install-collector-scheduled-task.ps1  install-collector-systemd.sh  uninstall-collector-scheduled-task.ps1  uninstall-collector-systemd.sh
(+14 files in other folders)
